fix validator errors

--- a/portfolio/project-2.html
+++ b/portfolio/project-2.html
@@ -46,8 +46,9 @@ layout: project
     Because I used some linux specific apis such as sockets. A little code refactoring is required to run it on the operationg systems.
   </p>
 
+  <h2>Tools I used</h2>
   <ul>
-    <span class="list-header">Tools I used</span>
+
     <li>Linux operating system (Ubuntu 18.04)</li>
     <li>
       C++ programming language
