Fix validation warnings

--- a/portfolio/project-1.html
+++ b/portfolio/project-1.html
@@ -36,11 +36,13 @@ layout: project
 ---
 
 <article>
+  <h2>Project description</h2>
   <p>
     In this article I will describe how I built this web site.
     It's built upon the jekyll static web site generator and Exto template.
     We will go through the tools I used and how I built it.
   </p>
+
 
   <dl>
     <dt>Jekyll</dt>
@@ -56,6 +58,7 @@ layout: project
     </dd>
   </dl>
 
+  <h3>Commands to execute</h3>
   <p>
     In order to install jekyll first you need to have ruby and gem installed on your local machine.
     The installation might differ from system to system. To install jekyll run:
