--- a/portfolio/project-3.html
+++ b/portfolio/project-3.html
@@ -36,13 +36,15 @@ layout: project
 ---
 
 <article>
-  <h2>The tools I used for this project</h2>
+  <h2>Project description</h2>
   <p>
     I created a simple real time web application.
     That was quite a challenging project because I decided to use tools I had no experience with but I was very curious about them.
-    I used <strong>node.js</strong> on server side to create a <strong>REST API</strong> and then I also wrote a client app in <strong>React.js</strong>.
     It was a lot of fun to see how we can use javascript on both backend and the frontend.
-    You can have a look at <a href="https://github.com/Enchanted57/TextMe">chat app github repo.</a>
+  </p>
+  <p>
+    I used <strong>node.js</strong> on server side to create a <strong>REST API</strong> and then I also wrote a client app in <strong>React.js</strong>.
+    You can have a look at <a href="https://github.com/Enchanted57/TextMe">chat app github repo.</a> And also look at the list of technologies.
   </p>
   <ul>
     <li>
@@ -68,6 +70,7 @@ layout: project
   <p>
     Project consists of two parts. The <a href="https://github.com/Enchanted57/TextMe">server application</a> and
     the <a href="https://github.com/Enchanted57/text-me-client">client application</a>.
+    This is probably most common architecture nowadays.
   </p>
   <p>
     Server provides REST API, saves messages in database and manages sockets connections. The authentication is implemented with the help of
