--- a/portfolio/project-4.html
+++ b/portfolio/project-4.html
@@ -36,22 +36,32 @@ layout: project
 ---
 
 <article>
-  <article>
-    <h2>Project description</h2>
-    <p>
-      This project was a quite interesting because it involved working with computer graphics.
-      User can design his/her program architecture with the help of this tool. It implements UML 2.0 standard.
-    </p>
-  </article>
+  <h2>Project description</h2>
+  <p>
+    This project was a quite interesting because it involved working with computer graphics.
+    User can design his/her program architecture with the help of this tool. It implements UML 2.0 standard.
+  </p>
+  <p>
+    It also required some knowledge of math.
+    For example knowledge of how to calculate the distance between point and line.
+  </p>
   <article>
     <h2>Tools I used</h2>
     <p>
       There is actually only one tool I used. I wrote it in <strong>C# programming language</strong>.
       It provided all I needed, especially the <strong>GDI+</strong> graphics library.
     </p>
+    <p>
+      All of it is part of <strong>C#</strong> standard library.
+      So there was no reason to use some external tools.
+      This project first of the more complex projects I created.
+    </p>
   </article>
   <article>
     <h2>Features</h2>
+    <p>
+      Here is the list of the features/function this software implements.
+    </p>
     <ul>
       <li>Drawing UML objects such as (classes, interfaces, relationships)</li>
       <li>Saving your progress to the json file</li>
@@ -63,6 +73,11 @@ layout: project
     <p>
       Well that was a fun project to work with computer graphics. I also learned <strong>UML standard</strong> well.
       Unfortunately I cannot provide link to the repository as I have not used version systems back then.
+    </p>
+    <p>
+      After some time I also learned of how important to use version controls systems such as git.
+      If you are not familiar with advantages it gives you please read
+      <a href="https://medium.com/weareservian/importance-of-version-control-and-why-you-need-it-aae53dac208a">the importance of version control</a> article.
     </p>
   </article>
 </article>
