--- a/portfolio/project-2.html
+++ b/portfolio/project-2.html
@@ -36,6 +36,7 @@ layout: project
 ---
 
 <article>
+  <h2>Project description</h2>
   <p>
     This project was a very challenging for me. As it requires a very good understanding and knowledge of HTTP protocol.
     I had to understand how to chunk the response and not to lose even 1 bit of information. Had to learn about linux processes a little bit.
@@ -46,6 +47,9 @@ layout: project
     Because I used some linux specific apis such as sockets. A little code refactoring is required to run it on the operationg systems.
   </p>
 
+</article>
+
+<article>
   <h2>Tools I used</h2>
   <ul>
 
@@ -62,8 +66,15 @@ layout: project
   </ul>
 </article>
 
-<h2>What I learned</h2>
-<p>
-  This project actually was a part of my semestral work on programming and algorithmics 2 subject.
-  And I actually learned a lot and was very satisfied with the result. Have a look on my <a href="https://gitlab.fit.cvut.cz/nurmaali/semestral-project">webserver repository.</a>
-</p>
+<article>
+  <h2>What I learned</h2>
+  <p>
+    Well I learned HTTP protocol and theory behind it.
+    I also learned about sockets and how to work with them properly.
+    I had to brush my knowledge about TCP/IP architecture.
+  </p>
+  <p>
+    This project actually was a part of my semestral work on programming and algorithmics 2 subject.
+    And I actually learned a lot and was very satisfied with the result. Have a look on my <a href="https://gitlab.fit.cvut.cz/nurmaali/semestral-project">webserver repository.</a>
+  </p>
+</article>
