Add content to about page

--- a/about.html
+++ b/about.html
@@ -37,16 +37,52 @@ layout: page
     I am FIT CTU student studying computer science. I like to learn new things all the time.
     My interests are focused on high performance backend systems and databases.
   </p>
+  <p>
+    I like learning on my own also. For example I learned <strong>JavaScript</strong> on my own.
+    I try to apply all my knowledge in practice as soon as possible.
+  </p>
+</article>
+
+<article>
   <h2>Part time dev</h2>
   <p>
-    I also help companies to develop backend systems in primarily in node.js and have working expereince with MongoDB, PostgreSQL, redis.
+    I work as the <strong>C++</strong> and <strong>JavaScript</strong> developer, primarily focusing on backend.
+    However I have working experience with frontend as well, for example <strong>React.js</strong>.
+    I also help companies to develop backend systems in primarily in node.js and have working experience with MongoDB, PostgreSQL, redis.
   </p>
+  <p>
+    I have a strong positive feeling for open-source software. While I am not involved in open-source community heavily yet, but I like
+    just reading open source projects. My favorites are:
+  </p>
+  <ul>
+    <li>
+      <a href="https://github.com/nodejs/node">node.js</a>
+    </li>
+    <li>
+      <a href="https://github.com/dotnet/core">dotnet core</a>
+    </li>
+    <li>
+      <a href="https://github.com/libuv/libuv">libuv</a>
+    </li>
+  </ul>
 </article>
 
 <article>
   <h2>Foodie</h2>
   <p>
-    I also like (perhaps as everyone) a tasty food. My favorite are Vietnamese and Czech cousine. I can eat a lot, you can probably say
+    I also like (perhaps as everyone) a tasty food. Sometimes I cook some of my favorite dishes.
+    I can eat a lot, you can probably say
     to yourself that I am a human fridge If you see me in person.
   </p>
+  <p>
+    However if I want a very good cooked dish I go to the saloon (czech hospoda) or Asian restaurant.
+    My favorite are Vietnamese and Czech cousine.
+    Listing of favorite food (in order):
+  </p>
+  <ol class="capitalize">
+    <li>svíčková</li>
+    <li>pho bo</li>
+    <li>guláš</li>
+    <li>kulajda</li>
+  </ol>
 </article>
