fix project titles make sence

--- a/portfolio/homepage-project.html
+++ b/portfolio/homepage-project.html
@@ -8,7 +8,7 @@ image: images/homepage.jpg
 image_alt: 'image of house in the program window'
 seo:
   title: 'My homepage'
-  description: This is the project 1 description
+  description: My homepage static web site
   extra:
     - name: 'og:type'
       value: website
