--- a/portfolio/chatapp-project.html
+++ b/portfolio/chatapp-project.html
@@ -7,8 +7,8 @@ thumb_image_alt: A yellow retro telephone on a yellow background
 image: images/chatapp.png
 image_alt: A yellow retro telephone on a yellow background
 seo:
-  title: Project Title 3
-  description: This is the project 3 description
+  title: Chat app
+  description: A small real time application
   extra:
     - name: 'og:type'
       value: website
