--- a/portfolio/umleditor-project.html
+++ b/portfolio/umleditor-project.html
@@ -8,7 +8,7 @@ image: images/uml_editor.jpg
 image_alt: A table tennis racket on a pink background
 seo:
   title: UML editor
-  description: This is the project 4 description
+  description: This is uml editor project
   extra:
     - name: 'og:type'
       value: website
