--- a/portfolio/webserver-project.html
+++ b/portfolio/webserver-project.html
@@ -7,8 +7,8 @@ thumb_image_alt: An orange on a blue background
 image: images/webserver1.png
 image_alt: An orange on a blue background
 seo:
-  title: Project Title 2
-  description: This is the project 2 description
+  title: Web server
+  description: Web server project
   extra:
     - name: 'og:type'
       value: website
