fix content in home page

--- a/portfolio/homepage-project.html
+++ b/portfolio/homepage-project.html
@@ -38,11 +38,14 @@ layout: project
 <article>
   <h2>Project description</h2>
   <p>
-    In this article I will describe how I built this web site.
+    I recently needed my portfolio web page to kind of introduce myself for potential customers or just people.
+    So I deciced to build a static web site with the help of some tools. I will try to describe them.
+  </p>
+  <p>
+    So there I will describe how I built this web site.
     It's built upon the jekyll static web site generator and Exto template.
     We will go through the tools I used and how I built it.
   </p>
-
 
   <dl>
     <dt>Jekyll</dt>
