fix links on index page and make them buttons

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ layout: body
                         Here I write about my recent projects and interesting technologies to me.
                         I write blog about tech and productivity, I hope you enjoy my content.
                     </p>
-                    <div>
-                        <a href="{{ '/about' | relative_url }}">more about me</a>
+                    <div class="block-content">
+                        <a href="{{ '/about' | relative_url }}" class="button">more about me</a>
                     </div>
                 </div>
             </div>
@@ -243,8 +243,8 @@ layout: body
                         Please feel free to contact me via e-mail.
                         I would love to read your feedback or work offer.
                     </p>
-                    <div>
-                        <a href="{{ '/contact' | relative_url }}">contact me</a>
+                    <div class="block-content">
+                        <a href="{{ '/contact' | relative_url }}" class="button">contact me</a>
                     </div>
                 </div>
             </div>
