move testimonials to the about page

--- a/about.html
+++ b/about.html
@@ -66,6 +66,52 @@ layout: page
     </li>
   </ul>
 </article>
+<!-- todo: Change layout to body -->
+<section id="testimonials" class="block block-testimonials outer">
+  <div class="inner">
+    <div class="block-header inner-sm">
+      <h2 class="block-title line-top">Testimonials</h2>
+      <p class="block-subtitle">People said about me</p>
+    </div>
+    <div class="block-content">
+      <div class="grid grid-col-3">
+        <div class="grid-item">
+          <blockquote class="testimonial">
+            <p class="testimonial-content">
+              We were very satisfied with Ali's work. He designed a REST API for our e-shop and still maintains it. Everything is up and running.
+            </p>
+            <footer class="testimonial-footer">
+              <img class="testimonial-avatar" src="{{ '/images/sean_salazar.jpg' | relative_url }}" alt="Sean Salazar's photo">
+              <cite class="testimonial-author">Sean Salazar</cite>
+            </footer>
+          </blockquote>
+        </div>
+        <div class="grid-item">
+          <blockquote class="testimonial">
+            <p class="testimonial-content">
+              We offered a landing page for our services, everything was delivered on time and is working perfectly. Good work.
+            </p>
+            <footer class="testimonial-footer">
+              <img class="testimonial-avatar" src="{{ '/images/aubrey_hoover.jpg' | relative_url }}" alt="Aubrey Hoover's photo">
+              <cite class="testimonial-author">Aubrey Hoover</cite>
+            </footer>
+          </blockquote>
+        </div>
+        <div class="grid-item">
+          <blockquote class="testimonial">
+            <p class="testimonial-content">
+              Ali helped me to develop smart home utilities and now I can control my home lights and heating system with my phone.
+            </p>
+            <footer class="testimonial-footer">
+              <img class="testimonial-avatar" src="{{ '/images/deegan_wallace.jpg' | relative_url }}" alt="Deegan Wallace's photo">
+              <cite class="testimonial-author">Deegan Wallace</cite>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <article>
   <h2>Foodie</h2>
