fix view all button is now white

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ layout: body
                         <div class="project-thumbnail">
                             <img src="{{ '/images/uml_editor.jpg' | relative_url }}" alt="A uml editor program screenshot image" />
                         </div>
-                        <span class="view-all-button">View All</span>
+                        <span class="view-all-button-white">View All</span>
                     </a>
                 </article>
             </div>
