move two paragraphs to the about page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 title: About Me
-subtitle: short description of who I am.
+subtitle: Discover more information about me what I like and what I do. There are also reviews from people who worked with me.
 image: images/about.jpg
 image_alt: A man taking a picture
 seo:
@@ -41,6 +41,14 @@ layout: page
     I like learning on my own also. For example I learned <strong>JavaScript</strong> on my own.
     I try to apply all my knowledge in practice as soon as possible.
   </p>
+  <p>
+    I am from Czech Republic and living in Prague.
+    But I love travelling and explore new places around the globe.
+  </p>
+  <p>
+    Here I write about my recent projects and interesting technologies to me.
+    I write blog about tech and productivity, I hope you enjoy my content.
+  </p>
 </article>
 
 <article>
@@ -66,7 +74,6 @@ layout: page
     </li>
   </ul>
 </article>
-<!-- todo: Change layout to body -->
 <section id="testimonials" class="block block-testimonials outer">
   <div class="inner">
     <div class="block-header inner-sm">
