add summary p tag to the homepage project page

--- a/portfolio/homepage-project.html
+++ b/portfolio/homepage-project.html
@@ -1,6 +1,6 @@
 ---
 title: 'My homepage'
-subtitle: 'Static portfolio home page'
+subtitle: 'The project about this very page. How I built it and what technologies did I use.'
 date: '2019-05-10'
 thumb_image: images/homepage_thumb.jpg
 thumb_image_alt: 'image of house in the program window'
