--- a/portfolio/webserver-project.html
+++ b/portfolio/webserver-project.html
@@ -1,6 +1,6 @@
 ---
 title: Web server
-subtitle: 'A project which I built as semestral work in the PA2 (programming and algorithmics 2) subject.'
+subtitle: 'A project which I built as semestral work in the PA2 (programming and algorithmics 2) subject. Find out what technologies I used and what I learned.'
 date: '2019-04-30'
 thumb_image: images/webserver_thumb.jpg
 thumb_image_alt: An orange on a blue background
