add summary p to the chat page

--- a/portfolio/chatapp-project.html
+++ b/portfolio/chatapp-project.html
@@ -1,6 +1,6 @@
 ---
 title: Chat application
-subtitle: simple real time chat application 
+subtitle: 'Real time chat application which I developed during my high school years. You will find what I learned and what technologies I used.'
 date: '2019-04-08'
 thumb_image: images/chatapp_thumb.png
 thumb_image_alt: A yellow retro telephone on a yellow background
