add summary p to the uml editor page

--- a/portfolio/umleditor-project.html
+++ b/portfolio/umleditor-project.html
@@ -1,6 +1,6 @@
 ---
 title: UML editor
-subtitle: Utility to draw UML diagrams
+subtitle: 'A project on UML diagrams. The program enables to draw uml 2.0 diagrams to help with architecture design.'
 date: '2019-02-26'
 thumb_image: images/uml_editor.jpg
 thumb_image_alt: A uml editor program screenshot image
