--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: body
         <div class="block-content">
             <div class="portfolio-feed layout-mosaic">
                 <article class="project">
-                    <a href="{{ '/portfolio/homepage-project/' | relative_url }}" class="project-link">
+                    <a href="{{ '/projects/homepage-project/' | relative_url }}" class="project-link">
                         <div class="project-thumbnail">
                             <img src="{{ '/images/homepage_thumb.jpg' | relative_url }}" alt="image of house in the program window" />
                         </div>
@@ -66,7 +66,7 @@ layout: body
                     </a>
                 </article>
                 <article class="project">
-                    <a href="{{ '/portfolio/webserver-project/' | relative_url }}" class="project-link">
+                    <a href="{{ '/projects/webserver-project/' | relative_url }}" class="project-link">
                         <div class="project-thumbnail">
                             <img src="{{ '/images/webserver_thumb.jpg' | relative_url }}" alt="A computer server image" />
                         </div>
@@ -76,7 +76,7 @@ layout: body
                     </a>
                 </article>
                 <article class="project">
-                    <a href="{{ '/portfolio/chatapp-project/' | relative_url}}" class="project-link">
+                    <a href="{{ '/projects/chatapp-project/' | relative_url}}" class="project-link">
                         <div class="project-thumbnail">
                             <img src="{{ '/images/chatapp_thumb.png' | relative_url }}" alt="Chat application logo" />
                         </div>
@@ -86,7 +86,7 @@ layout: body
                     </a>
                 </article>
                 <article class="project">
-                    <a href="{{ '/portfolio' | relative_url }}" class="project-link view-all-link">
+                    <a href="{{ '/projects' | relative_url }}" class="project-link view-all-link">
                         <div class="project-thumbnail">
                             <img src="{{ '/images/uml_editor.jpg' | relative_url }}" alt="A uml editor program screenshot image" />
                         </div>
