add summary p tag in web server

--- a/projects/webserver-project.html
+++ b/projects/webserver-project.html
@@ -34,25 +34,24 @@ seo:
       relativeUrl: true
 layout: project
 ---
-
 <article>
   <h2>Project description</h2>
   <p>
     This project was a very challenging for me. As it requires a very good understanding and knowledge of HTTP protocol.
     I had to understand how to chunk the response and not to lose even 1 bit of information. Had to learn about linux processes a little bit.
   </p>
-
   <p>
     I developed and tested my webserver on Ubuntu 18.04. For other operating system a little refactoring will be required.
     Because I used some linux specific apis such as sockets. A little code refactoring is required to run it on the operationg systems.
   </p>
-
 </article>
-
 <article>
   <h2>Tools I used</h2>
+  <p>
+    Following is the complete list of the tools I used in this project.
+    Of course I did not list C++ standard library.
+  </p>
   <ul>
-
     <li>Linux operating system (Ubuntu 18.04)</li>
     <li>
       C++ programming language
@@ -65,7 +64,6 @@ layout: project
     <li>Makefile</li>
   </ul>
 </article>
-
 <article>
   <h2>What I learned</h2>
   <p>
