make definition list of favorite open source projects

--- a/about.html
+++ b/about.html
@@ -62,17 +62,26 @@ layout: page
     I have a strong positive feeling for open-source software. While I am not involved in open-source community heavily yet, but I like
     just reading open source projects. My favorites are:
   </p>
-  <ul>
-    <li>
-      <a href="https://github.com/nodejs/node">node.js</a>
-    </li>
-    <li>
-      <a href="https://github.com/dotnet/core">dotnet core</a>
-    </li>
-    <li>
-      <a href="https://github.com/libuv/libuv">libuv</a>
-    </li>
-  </ul>
+  <dl>
+    <dt>
+      <a href="https://github.com/nodejs/node">node.js (project's repo)</a>
+    </dt>
+    <dd>
+      - is an open-source, cross-platform, JavaScript runtime environment
+    </dd>
+    <dt>
+      <a href="https://github.com/dotnet/core">dotnet core (project's repo)</a>
+    </dt>
+    <dd>
+      - is a free and open-source, managed computer software framework for Windows, Linux, and macOS operating systems
+    </dd>
+    <dt>
+      <a href="https://github.com/libuv/libuv">libuv (project's repo)</a>
+    </dt>
+    <dd>
+      - libuv is a multi-platform support library with a focus on asynchronous I/O
+    </dd>
+  </dl>
 </article>
 <section id="testimonials" class="block block-testimonials outer">
   <div class="inner">
