add p summary on testimonials

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@ layout: page
   <div class="inner">
     <div class="block-header inner-sm">
       <h2 class="block-title line-top">Testimonials</h2>
-      <p class="block-subtitle">People said about me</p>
+      <p class="block-subtitle">People who worked with me, told about me the following.</p>
     </div>
     <div class="block-content">
       <div class="grid grid-col-3">
