add pictures of food on about page

--- a/about.html
+++ b/about.html
@@ -141,10 +141,32 @@ layout: page
     My favorite are Vietnamese and Czech cousine.
     Listing of favorite food (in order):
   </p>
-  <ol class="capitalize">
-    <li>svíčková</li>
-    <li>pho bo</li>
-    <li>guláš</li>
-    <li>kulajda</li>
+  <ol class="capitalize food-gallery">
+    <li>
+      <figure>
+        <figcaption>
+          svíčková
+        </figcaption>
+        <img src="{{ '/images/svickova.jpeg' | relative_url }}" alt="svickova food picture" title="svíčková">
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <figcaption>pho bo</figcaption>
+        <img src="{{ '/images/pho-bo.jpg' | relative_url }}" alt="pho bo food picture" title="pho bo">
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <figcaption>guláš</figcaption>
+        <img src="{{ '/images/gulas.jpg' | relative_url }}" alt="gulas s knedlikem picture" title="guláš">
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <figcaption>kulajda</figcaption>
+        <img src="{{ '/images/kulajda.jpg' | relative_url }}" alt="kulajda soup picture" title="kulajda">
+      </figure>
+    </li>
   </ol>
 </article>
