add popisky to the projects

--- a/projects/chatapp-project.html
+++ b/projects/chatapp-project.html
@@ -1,5 +1,6 @@
 ---
 title: Chat application
+popisek: Real time chat application written in node.js
 subtitle: 'Real time chat application which I developed during my high school years. You will find what I learned and what technologies I used.'
 date: '2019-04-08'
 thumb_image: images/chatapp_thumb.png
