--- a/projects/homepage-project.html
+++ b/projects/homepage-project.html
@@ -1,5 +1,6 @@
 ---
 title: 'My homepage'
+popisek: Project is about this very page.
 subtitle: 'The project about this very page. How I built it and what technologies did I use.'
 date: '2019-05-10'
 thumb_image: images/homepage_thumb.jpg
