--- a/projects/umleditor-project.html
+++ b/projects/umleditor-project.html
@@ -1,5 +1,6 @@
 ---
 title: UML editor
+popisek: <span class="upper">uml</span> diagram drawing program.
 subtitle: 'A project on UML diagrams. The program enables to draw uml 2.0 diagrams to help with architecture design.'
 date: '2019-02-26'
 thumb_image: images/uml_editor.jpg
