--- a/projects/webserver-project.html
+++ b/projects/webserver-project.html
@@ -1,5 +1,6 @@
 ---
 title: Web server
+popisek: 'The program which accepts requests via <span class="upper">http</span> and replies with data.'
 subtitle: 'A project which I built as semestral work in the PA2 (programming and algorithmics 2) subject. Find out what technologies I used and what I learned.'
 date: '2019-04-30'
 thumb_image: images/webserver_thumb.jpg
