--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ layout: body
                         </div>
                         <header class="project-header">
                             <h3 class="project-title">My homepage</h3>
+                            <p class="project-title">Project is about this very page.</p>
                         </header>
                     </a>
                 </article>
@@ -72,6 +73,7 @@ layout: body
                         </div>
                         <header class="project-header">
                             <h3 class="project-title">Web server</h3>
+                            <p class="project-title">The program which accepts requests via <span class="upper">http</span> and replies with data.</p>
                         </header>
                     </a>
                 </article>
@@ -82,6 +84,7 @@ layout: body
                         </div>
                         <header class="project-header">
                             <h3 class="project-title">Chat application</h3>
+                            <p class="project-title">Real time chat application written in node.js</p>
                         </header>
                     </a>
                 </article>
@@ -101,7 +104,7 @@ layout: body
     <div class="inner">
         <div class="block-header inner-sm">
             <h2 class="block-title line-top">Latest from the Blog</h2>
-            <p class="block-subtitle">See also my blog posts</p>
+            <p>See also my blog posts. Posts are sorted by the <strong>last modified</strong> date.</p>
         </div>
         <div class="block-content">
             <div class="post-feed grid grid-col-3">
@@ -176,7 +179,7 @@ layout: body
     <div class="inner">
         <div class="block-header inner-sm">
             <h2 class="block-title line-top">How to contact me</h2>
-            <p class="block-subtitle">Get in touch with me</p>
+            <p>Get in touch with me</p>
         </div>
         <div class="block-content">
             <div class="grid grid-col-2">
