refactor uml page

--- a/projects/umleditor-project.html
+++ b/projects/umleditor-project.html
@@ -1,7 +1,7 @@
 ---
-title: UML editor
+title: '<span class="upper">uml</span> editor'
 popisek: <span class="upper">uml</span> diagram drawing program.
-subtitle: 'A project on UML diagrams. The program enables to draw uml 2.0 diagrams to help with architecture design.'
+subtitle: 'A project on <span class="upper">uml</span> diagrams. The program enables to draw uml 2.0 diagrams to help with architecture design.'
 date: '2019-02-26'
 thumb_image: images/uml_editor.jpg
 thumb_image_alt: A uml editor program screenshot image
@@ -40,7 +40,7 @@ layout: project
   <h2>Project description</h2>
   <p>
     This project was a quite interesting because it involved working with computer graphics.
-    User can design his/her program architecture with the help of this tool. It implements UML 2.0 standard.
+    User can design his/her program architecture with the help of this tool. It implements <span class="upper">uml</span> 2.0 standard.
   </p>
   <p>
     It also required some knowledge of math.
@@ -64,7 +64,7 @@ layout: project
       Here is the list of the features/function this software implements.
     </p>
     <ul>
-      <li>Drawing UML objects such as (classes, interfaces, relationships)</li>
+      <li>Drawing <span class="upper">uml</span> objects such as (classes, interfaces, relationships)</li>
       <li>Saving your progress to the json file</li>
       <li>Loading your progress from the json file</li>
     </ul>
@@ -72,7 +72,7 @@ layout: project
   <article>
     <h2>What have I learned?</h2>
     <p>
-      Well that was a fun project to work with computer graphics. I also learned <strong>UML standard</strong> well.
+      Well that was a fun project to work with computer graphics. I also learned <strong><span class="upper">uml</span> standard</strong> well.
       Unfortunately I cannot provide link to the repository as I have not used version systems back then.
     </p>
     <p>
