--- a/about.html
+++ b/about.html
@@ -32,6 +32,17 @@ seo:
 layout: page
 ---
 <article>
+  <h2>Bio</h2>
+  <p>
+    I am from Czech Republic and living in Prague.
+    But I love travelling and explore new places around the globe.
+  </p>
+  <p>
+    Here I write about my recent projects and interesting technologies to me.
+    I write blog about tech and productivity, I hope you enjoy my content.
+  </p>
+</article>
+<article>
   <h2>Student</h2>
   <p>
     I am FIT CTU student studying computer science. I like to learn new things all the time.
@@ -40,14 +51,6 @@ layout: page
   <p>
     I like learning on my own also. For example I learned <strong>JavaScript</strong> on my own.
     I try to apply all my knowledge in practice as soon as possible.
-  </p>
-  <p>
-    I am from Czech Republic and living in Prague.
-    But I love travelling and explore new places around the globe.
-  </p>
-  <p>
-    Here I write about my recent projects and interesting technologies to me.
-    I write blog about tech and productivity, I hope you enjoy my content.
   </p>
 </article>
 
