projects meta tags now make sence

--- a/projects/homepage-project.html
+++ b/projects/homepage-project.html
@@ -15,10 +15,10 @@ seo:
       value: website
       keyName: property
     - name: 'og:title'
-      value: Project Title 1
+      value: My homepage
       keyName: property
     - name: 'og:description'
-      value: This is the project 1 description
+      value: My homepage static web site
       keyName: property
     - name: 'og:image'
       value: images/1.jpg
@@ -27,9 +27,9 @@ seo:
     - name: 'twitter:card'
       value: summary_large_image
     - name: 'twitter:title'
-      value: Project Title 1
+      value: My homepage
     - name: 'twitter:description'
-      value: This is the project 1 description
+      value: My homepage static web site
     - name: 'twitter:image'
       value: images/1.jpg
       relativeUrl: true
