--- a/projects/umleditor-project.html
+++ b/projects/umleditor-project.html
@@ -15,10 +15,10 @@ seo:
       value: website
       keyName: property
     - name: 'og:title'
-      value: Project Title 4
+      value: UML editor
       keyName: property
     - name: 'og:description'
-      value: This is the project 4 description
+      value: This is uml editor project
       keyName: property
     - name: 'og:image'
       value: images/4.jpg
@@ -27,9 +27,9 @@ seo:
     - name: 'twitter:card'
       value: summary_large_image
     - name: 'twitter:title'
-      value: Project Title 4
+      value: UML editor
     - name: 'twitter:description'
-      value: This is the project 4 description
+      value: This is uml editor project
     - name: 'twitter:image'
       value: images/4.jpg
       relativeUrl: true
