--- a/projects/chatapp-project.html
+++ b/projects/chatapp-project.html
@@ -15,10 +15,10 @@ seo:
       value: website
       keyName: property
     - name: 'og:title'
-      value: Project Title 3
+      value: Chat app
       keyName: property
     - name: 'og:description'
-      value: This is the project 3 description
+      value: Real time chat application
       keyName: property
     - name: 'og:image'
       value: images/3.jpg
@@ -27,9 +27,9 @@ seo:
     - name: 'twitter:card'
       value: summary_large_image
     - name: 'twitter:title'
-      value: Project Title 3
+      value: Chat app
     - name: 'twitter:description'
-      value: This is the project 3 description
+      value: Real time chat application
     - name: 'twitter:image'
       value: images/3.jpg
       relativeUrl: true
