--- a/projects/webserver-project.html
+++ b/projects/webserver-project.html
@@ -15,10 +15,10 @@ seo:
       value: website
       keyName: property
     - name: 'og:title'
-      value: Project Title 2
+      value: Web server
       keyName: property
     - name: 'og:description'
-      value: This is the project 2 description
+      value: Web server
       keyName: property
     - name: 'og:image'
       value: images/2.jpg
@@ -27,9 +27,9 @@ seo:
     - name: 'twitter:card'
       value: summary_large_image
     - name: 'twitter:title'
-      value: Project Title 2
+      value: Web server
     - name: 'twitter:description'
-      value: This is the project 2 description
+      value: Web server
     - name: 'twitter:image'
       value: images/2.jpg
       relativeUrl: true
