add summary p tag on the contact page

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 ---
 title: Contact
+subtitle: Here is the contact form to reach me. Your provided data will be stored on the server.
 hide_title: false
 seo:
   title: Contact
